fix overflow for ios

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -22,6 +22,8 @@
 .layout {
   display: flex;
   height: 100%;
+  overflow: auto;
+  -webkit-overflow-scrolling:touch;
   flex-direction: column;
 }
 
